--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ li a { display:block;
     color: white;
     text-decoration: none;
 text-align:center;
-padding: 20px;
+padding: 10px;
 }
 li a:hover {
 color: blue;
@@ -23,5 +23,18 @@ color: blue;
 h3 { color: blue;
 
 }
+aside{
+    width:25vw ;
+    height:25vw ;
+    background-color: grey;
+    float: right;
+
+}
+table,th,td { 
+    border: 1px solid black;
+    background-color: rgb(78, 127, 190);
+}
+
+
 
 
